--- a/unstable-service/src/main/resources/application.properties
+++ b/unstable-service/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=unstable-service
+server.port=8081
+# Expose actuator endpoints
+management.endpoints.web.exposure.include=*
